log
Wed, Mar 26, 2025  9:15:36 AM: 
 tests:  0|6
total_score: 0/70
25021aa
Thu, Mar 27, 2025  6:41:52 PM: 
 list.c | 10 +++++++++-
 1 file changed, 9 insertions(+), 1 deletion(-)
 tests:  2|5
total_score: 15/70
9c54420
Thu, Mar 27, 2025  6:45:09 PM: 
 list.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
In file included from test.c:5:0:
list.c: In function 'firstList':
list.c:44:1: error: control reaches end of non-void function [-Werror=return-type]
 }
 ^
cc1.exe: all warnings being treated as errors
Compilation failed
9186b18
Thu, Mar 27, 2025  6:47:06 PM: 
 list.c | 1 +
 1 file changed, 1 insertion(+)
In file included from test.c:5:0:
list.c: In function 'firstList':
list.c:44:1: error: control reaches end of non-void function [-Werror=return-type]
 }
 ^
cc1.exe: all warnings being treated as errors
Compilation failed
c4237b7
Thu, Mar 27, 2025  6:47:40 PM: 
 list.c | 3 +--
 1 file changed, 1 insertion(+), 2 deletions(-)
 tests:  0|0
00999d0
Thu, Mar 27, 2025  6:48:25 PM: 
 list.c | 4 +++-
 1 file changed, 3 insertions(+), 1 deletion(-)
 tests:  0|0
1318646
Thu, Mar 27, 2025  6:50:57 PM: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|0
d966cfa
Thu, Mar 27, 2025  6:52:05 PM: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|0
6ec59a9
Thu, Mar 27, 2025  6:54:37 PM: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  2|5
total_score: 15/70
d7e33b1
Thu, Mar 27, 2025  6:56:57 PM: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  2|5
total_score: 15/70
af3e054
Thu, Mar 27, 2025  6:59:19 PM: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  2|5
total_score: 15/70
a088a0a
Thu, Mar 27, 2025  7:23:35 PM: 
 list.c | 4 +---
 1 file changed, 1 insertion(+), 3 deletions(-)
 tests:  1|5
total_score: 10/70
05f3a19
Thu, Mar 27, 2025  7:24:07 PM: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  2|5
total_score: 15/70
99d98e0
Thu, Mar 27, 2025  7:24:55 PM: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  2|5
total_score: 15/70
ec90ef9
Thu, Mar 27, 2025  7:27:30 PM: 
 list.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
 tests:  0|0
3adc848
Thu, Mar 27, 2025  7:28:08 PM: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  5|4
total_score: 25/70
bef5637
Thu, Mar 27, 2025  7:32:43 PM: 
 list.c | 8 ++++++--
 1 file changed, 6 insertions(+), 2 deletions(-)
 tests:  9|3
total_score: 35/70
12cdbea
Thu, Mar 27, 2025  8:33:07 PM: 
 list.c | 1 +
 1 file changed, 1 insertion(+)
 tests:  9|3
total_score: 35/70
cffee79
Fri, Mar 28, 2025  8:22:46 PM: 
 list.c | 6 ++++++
 1 file changed, 6 insertions(+)
 tests:  9|3
total_score: 35/70
a5aed6d
Fri, Mar 28, 2025  8:24:01 PM: 
 list.c | 5 +++++
 1 file changed, 5 insertions(+)
 tests:  9|3
total_score: 35/70
1c2533b
Fri, Mar 28, 2025  8:24:35 PM: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  9|3
total_score: 35/70
91c5325
Fri, Mar 28, 2025  8:24:55 PM: 
 list.c | 3 +--
 1 file changed, 1 insertion(+), 2 deletions(-)
 tests:  9|3
total_score: 35/70
0f019d9
Fri, Mar 28, 2025  8:26:10 PM: 
 list.c | 3 +--
 1 file changed, 1 insertion(+), 2 deletions(-)
 tests:  10|2
total_score: 45/70
f55717b
Fri, Mar 28, 2025  9:24:46 PM: 
 list.c | 4 ++++
 1 file changed, 4 insertions(+)
In file included from test.c:5:0:
list.c: In function 'pushCurrent':
list.c:82:55: error: 'return' with a value, in function returning void [-Werror]
     if (list->current == NULL || list == NULL) return NULL;
                                                       ^~~~
list.c:81:6: note: declared here
 void pushCurrent(List * list, void * data) {
      ^~~~~~~~~~~
cc1.exe: all warnings being treated as errors
Compilation failed
9ce06c9
Fri, Mar 28, 2025  9:35:16 PM: 
 list.c | 4 ++++
 1 file changed, 4 insertions(+)
In file included from test.c:5:0:
list.c: In function 'pushCurrent':
list.c:82:55: error: 'return' with a value, in function returning void [-Werror]
     if (list->current == NULL || list == NULL) return NULL;
                                                       ^~~~
list.c:81:6: note: declared here
 void pushCurrent(List * list, void * data) {
      ^~~~~~~~~~~
cc1.exe: all warnings being treated as errors
Compilation failed
cbfe727
Fri, Mar 28, 2025  9:35:35 PM: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  10|2
total_score: 45/70
6d62d1e
Fri, Mar 28, 2025  9:35:58 PM: 
 list.c | 4 +++-
 1 file changed, 3 insertions(+), 1 deletion(-)
 tests:  10|2
total_score: 45/70
57302c9
Fri, Mar 28, 2025  9:37:55 PM: 
 list.c | 8 ++++----
 1 file changed, 4 insertions(+), 4 deletions(-)
 tests:  10|2
total_score: 45/70
3664efa
Fri, Mar 28, 2025  9:39:39 PM: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  10|2
total_score: 45/70
fce605c
Fri, Mar 28, 2025  9:40:51 PM: 
 list.c | 3 ++-
 1 file changed, 2 insertions(+), 1 deletion(-)
 tests:  11|1
total_score: 55/70
c431519
Fri, Mar 28, 2025  9:49:00 PM: 
 list.c | 6 +++++-
 1 file changed, 5 insertions(+), 1 deletion(-)
In file included from test.c:5:0:
list.c: In function 'popCurrent':
list.c:111:1: error: control reaches end of non-void function [-Werror=return-type]
 }
 ^
cc1.exe: all warnings being treated as errors
Compilation failed
bbd22e8
Fri, Mar 28, 2025  9:49:25 PM: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:5:0:
list.c: In function 'popCurrent':
list.c:106:48: error: 'return' with no value, in function returning non-void [-Werror]
     if (list->current == NULL || list == NULL) return;
                                                ^~~~~~
list.c:105:8: note: declared here
 void * popCurrent(List * list) {
        ^~~~~~~~~~
cc1.exe: all warnings being treated as errors
Compilation failed
b97f9fd
Fri, Mar 28, 2025  9:51:09 PM: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:5:0:
list.c: In function 'popCurrent':
list.c:111:1: error: control reaches end of non-void function [-Werror=return-type]
 }
 ^
cc1.exe: all warnings being treated as errors
Compilation failed
d36993b
Fri, Mar 28, 2025  9:52:13 PM: 
 list.c | 3 +++
 1 file changed, 3 insertions(+)
 tests:  11|1
total_score: 55/70
0a708e6
